fix: align sources with other viz

--- a/src/less/tableau.less
+++ b/src/less/tableau.less
@@ -195,21 +195,16 @@
     &::before {
       background-color: @grey-1;
     }
-
-    .sources-list > li,
-    .sources-list > li > * {
-      color: @textColor;
-    }
-
-    a:hover {
-      color: @secondaryColor;
-    }
   }
 
   .sources-list {
     margin: 0;
     list-style: decimal inside;
     padding-inline-start: 0;
+  }
+
+  .embed-sources-param-description {
+    margin-left: 5px;
   }
 
   @media screen and (max-width: @largestMobileScreen) {
